@@ -106,13 +106,13 @@ ENDIF(${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 1.9)
 # Black list of images known to break lots of readers (efilm, xmedcon ...):
 SET(BLACK_LIST
   "gdcm-JPEG-LossLessThoravision.dcm" # serial killer
-  "cr172241.dcm"           #temporarily remove as it kills my gnome session (but not kde)
+  "cr172241.dcm"           #temporarily remove as it kills my gnome session
+                           # (but not kde)
   "emptyImage.dcm"         #the png looks ugly...
-  "gdcm-MR-PHILIPS-16-Multi-Seq.fixed.dcm" #weird looks exactly the same as gdcm-MR-PHILIPS-16-Multi-Seq.dcm
-  "gdcm-MR-PHILIPS-16.dcm" #png looks ugly
   "irmPhlipsNew1.dcm"      #png looks ugly
   "mriThruVPRO.dcm"        #png looks ugly
-  "US.3405.1.dcm"          #looks exactly the same as US.1.2.dcm
+  "gdcm-MR-SIEMENS-16-1.acr"   #segfaults TestReadWriteReadCompare
+  "oldACR00001.ima"        #segfaults TestReadWriteReadCompare
   )
 
 #   gdcm-ACR-LibIDO seems to be cut
